--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fullcalendar-reactwrapper": "^1.0.7",
     "hex-to-rgba": "^1.0.2",
     "history": "^4.9.0",
+    "html2canvas": "1.0.0-alpha.12",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
